# about_me

./: .env  .peroku.json  Cargo.toml  Dockerfile  README.md  README.txt  asset-manifest.json  build.rs  index.html  index.scss  info.js  package-lock.json  package.json  precache-manifest.4d3aadb9d04d17aaa8b31261dd32a670.js  precache-manifest.795273ef590593b49f02bbd98e0345e0.js  precache-manifest.ab22b0cdb0f76a48c10fb2ce221d87a7.js  precache-manifest.d2e79debc91f2798dbc003aee36b237d.js  quartz.config.ts  quartz.layout.ts  service-worker.js  tailwind.config.js  tailwind.css  tsconfig.json
.cargo/: config.toml
.github/workflows/: docker-publish.yml
app/: Cargo.toml
app/src/: lib.rs
assets/css/: main.css
content/: Made with quartz.md  index.md
data/: projects.json
pages/: _app.tsx  index.tsx
public/: CNAME  _redirects  index.html
public/blog/: test.md
public/images/: Arun_idk.ai
quartz/components/: Footer.tsx  Head.tsx
src/: App.svelte  App.tsx  App.vue  app.rs  blog.rs  main.rs  markdown.rs  router.js
src/blog/: test.md
src/components/: AboutCard.vue  NavBar.vue  themeWrapper.tsx
src/data/: projects.json
src/plugins/: vuetify.js  vuetify.ts
src/util/: index.ts  themeContext.tsx  useDarkMode.ts
src/views/: Home.vue  Projects.vue  Resume.vue
static/css/: 4.c83c8d54.chunk.css  4.c83c8d54.chunk.css.map
static/js/: 0.738e878c.chunk.js  0.738e878c.chunk.js.map  0.adbe69cf.chunk.js  0.adbe69cf.chunk.js.map  1.7aae3c14.chunk.js  1.7aae3c14.chunk.js.map  1.f37eec2c.chunk.js  1.f37eec2c.chunk.js.map  (+56 more)
style/: main.scss
types/: vuetify.d.ts
(+6 files in other folders)
