[package]
name = "about_me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4", features = ["csr", "nightly"] }
leptos_router = { version = "0.4", features = ["csr", "nightly"] }

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
lib-profile-release = "wasm-release"


[build-dependencies]
femark = "0.1.4"
